--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -16,8 +16,7 @@
               <i class="fa fa-info-circle"></i> Features
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item text-center" href=""><i class="fa fa-plus"></i> Applications</a></li>
-              <li><a class="dropdown-item text-center" href=""><i class="fa fa-car"></i> Cars</a></li>
+              <li><a class="dropdown-item text-center" href="{% url 'applications' %}"><i class="fa fa-plus"></i> Applications</a></li>
             </ul>
           </li>
         </ul>
@@ -27,7 +26,7 @@
               <img src="{{ request.user.image_url }}" alt="Photo" id="profile-picture" width="30" class="rounded-circle">
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item text-center" href=""><i class="fa fa-address-card" aria-hidden="true"></i>
+              <a class="dropdown-item text-center" href="{% url 'profile' username=request.user.username %}"><i class="fa fa-address-card" aria-hidden="true"></i>
                 {% if user.first_name and user.last_name %}
                   {{ user.first_name }} {{ user.last_name }}
                 {% else %}
