--- a/app/templates/app/sign_up.html
+++ b/app/templates/app/sign_up.html
@@ -18,13 +18,13 @@
                       <div class="col">
                         <div class="form-group">
                           <label for="first_name">First name</label>
-                          <input type="text" class="form-control" minlength="8" aria-describedby="first_name" placeholder="John" name="first_name" required>
+                          <input type="text" class="form-control" aria-describedby="first_name" placeholder="John" name="first_name" required>
                         </div>
                       </div>
                       <div class="col">
                         <div class="form-group">
                           <label for="last_name">Last name</label>
-                          <input type="text" class="form-control" minlength="8" aria-describedby="last_name" placeholder="Doe" name="last_name" required>
+                          <input type="text" class="form-control" aria-describedby="last_name" placeholder="Doe" name="last_name" required>
                         </div>
                       </div>
                     </div>
@@ -32,7 +32,7 @@
                       <div class="col">
                         <div class="form-group">
                           <label for="username">Username</label>
-                          <input type="text" class="form-control" minlength="8" aria-describedby="username" placeholder="johndoe123" name="username" required>
+                          <input type="text" class="form-control" aria-describedby="username" placeholder="johndoe123" name="username" required>
                         </div>
                       </div>
                       <div class="col">
